--- a/src/app/pages/atendimento/detalhe-atendimento/detalhe-atendimento.component.html
+++ b/src/app/pages/atendimento/detalhe-atendimento/detalhe-atendimento.component.html
@@ -6,74 +6,62 @@
           <nb-icon icon="arrow-back" title="voltar"></nb-icon>
         </a>
       </div>
-      <h5>Detalhes do atendimento</h5>
+      <h5>Detalhes do Atendimento</h5>
     </nb-card-header>
     <nb-card-body>
       <div class="form-row align-items-center">
         <div class="form-group col-md-6 ">
-          <div class="form-group ">
+          <div class="form-group">
             <div class="form-row">
-              <div class="mr-2"><label>Médico: </label></div>
-              <label>{{atendimento.medico}} </label>
-            </div>
-            <div class="form-row">
-              <div class="mr-2"><label>Paciente: </label></div>
-              <label>{{atendimento.paciente}} </label>
-            </div>
-            <div class="form-row">
-              <div class="mr-2"><label>Data: </label></div>
-              <label>{{atendimento.data}} </label>
-            </div>
-            <div *ngIf="atendimento.nomeResponsavel !== null" class="form-row">
-              <div class="mr-2"><label>Nome da mãe: </label></div>
-              <label>{{atendimento.nameMother}} </label>
-            </div>
-            <div *ngIf="atendimento.nomeResponsavel !== null" class="form-row">
-              <div class="mr-2"><label>Nome do pai: </label></div>
-              <label>{{atendimento.nameFather}} </label>
-            </div>           
+              <div class="mr-2"><label>Nome do Médico: </label></div>
+              <label>{{ paciente.medico }} </label>
           </div>
+            <div class="form-row">
+                <div class="mr-2"><label>Data do Atendimento: </label></div>
+                <label>{{ paciente.data }} {{ paciente.horario }}</label>
+            </div>
+            <div class="form-row">
+                <div class="mr-2"><label>Nome do Paciente: </label></div>
+                <label>{{ paciente.nomePaciente }}</label>
+            </div>
+            <div class="form-row">
+                <div class="mr-2"><label>Nome da Mãe: </label></div>
+                <label>{{ paciente.nameMother }}</label>
+            </div>
+            <div class="form-row">
+                <div class="mr-2"><label>Nome do Pai: </label></div>
+                <label>{{ paciente.nameFather }}</label>
+            </div>
+        </div>
+        
         </div>
         <div class="form-group col-md-6 ">
           <div class="form-group ">
             <div class="form-row">
-              <div class="mr-2"><label>Forma pagamento: </label></div>
-              <label>{{atendimento.formaPagamento}} </label>
+              <div class="mr-2"><label>Forma Pagamento: </label></div>
+              <label>{{paciente.formaPagamento}} </label>
             </div>
             <div class="form-row">
               <div class="mr-2"><label>Modalidade: </label></div>
-              <label>{{atendimento.modalidade}} </label>
+              <label>{{paciente.modalidade}} </label>
             </div>
             <div class="form-row">
-              <div class="mr-2"><label>Status: </label></div>
-              <label>{{atendimento.status}} </label>
-            </div>
+              <div class="mr-2"><label>Situação: </label></div>
+              <label>{{paciente.status}} </label>
+            </div>   
             <div class="form-row">
-              <div class="mr-2"><label>Horário: </label></div>
-              <label>{{atendimento.horario}} </label>
-            </div>           
+              <div class="mr-2"><label>Telefone Paciente: </label></div>
+              <label>{{paciente.telefone}} </label>
+            </div> 
+            <div class="form-row">
+              <div class="mr-2"><label>Email Paciente: </label></div>
+              <label>{{paciente.email}} </label>
+            </div>      
           </div>
         </div>
       </div>
     </nb-card-body>
   </nb-card>
-  <!--<nb-card>
-    <nb-card-header>
-      <h5>Informações do atendimento</h5>
-    </nb-card-header>
-    <nb-card-body>
-      <div class="form-row">
-        <div class="col-lg-12">
-          <div class="input-medica">
-              <div><label>Prescrição </label></div>
-              <textarea class="form-control" rows="3"
-                  id="prescricaoMedica" placeholder="Prescrição médica" [value]="atendimento.prescricao" 
-                  [disabled]="atendimento.status !== '03 - Consulta Confirmada'" ></textarea>             
-          </div>
-      </div>            
-      </div>
-    </nb-card-body>
-  </nb-card>-->
   <nb-card>
     <nb-card-body>
       <nb-actions size="large" fullWidth>
@@ -87,48 +75,34 @@
           *ngIf="atendimento.status ==='01 - Aguardando Aprovação' || atendimento.status ==='02 - Aguardando Pagamento'"
           (click)="aprovarPagamento()">
           <nb-icon class="action-icon" icon="checkmark-circle-outline"></nb-icon>
-          <span>Aprovar pagamento</span>
+          <span>Aprovar Pagamento</span>
         </nb-action>
         <nb-action *ngIf="atendimento.status ==='03 - Consulta Confirmada'
         && atendimento.modalidade ==='Consulta por Video Chamada'
         && atendimento.urlCall !== null" (click)="goToLink(atendimento.urlCall)">
           <nb-icon class="action-icon" icon="wifi-outline"></nb-icon>
-          <span>Iniciar atendimento</span>
+          <span>Atender</span>
         </nb-action>
-        <!--<nb-action>
-          <nb-icon class="action-icon" icon="archive-outline"></nb-icon>
-          <span>Ver histórico</span>
-        </nb-action>-->
+
+        <nb-action *ngIf="atendimento.status ==='03 - Consulta Confirmada'  || atendimento.status ==='02 - Aguardando Pagamento'
+        " (click)="editarConsulta(atendimento.urlCall)">
+          <nb-icon class="action-icon" icon="edit-outline"></nb-icon>
+          <span>Reagendar</span>
+        </nb-action>
+        
         <nb-action *ngIf="(atendimento.status ==='01 - Aguardando Aprovação' || atendimento.status ==='03 - Consulta Confirmada'
-        || atendimento.status ==='02 - Aguardando Pagamento') && atendimento.formaPagamento == 'PIX'"
+        || atendimento.status ==='02 - Aguardando Pagamento') && atendimento.formaPagamento === 'PIX'"
           (click)="abrirComprovante()">
           <nb-icon class="action-icon" icon="attach-outline"></nb-icon>
-          <span>Ver comprovante</span>
+          <span>Ver Comprovante</span>
         </nb-action>
         <nb-action
           *ngIf="atendimento.status ==='03 - Consulta Confirmada' || atendimento.status === '04 - Consulta Finalizada'">
           <nb-icon class="action-icon" icon="file-outline" (click)="abrirConsulta()"></nb-icon>
-          <span>Atualizar prontuário</span>
+          <span>Atualizar Prontuário</span>
         </nb-action>
-        <nb-action
-          *ngIf="atendimento.status ==='01 - Aguardando Aprovação' || atendimento.status ==='02 - Aguardando Pagamento' || atendimento.status ==='03 - Consulta Confirmada'">
-          <nb-icon class="action-icon" icon="edit-outline" (click)="editarConsulta()"></nb-icon>
-          <span>Reagendar</span>
-        </nb-action>
+
       </nb-actions>
     </nb-card-body>
   </nb-card>
-</div>
-
-<div #card>
-  <div class="col-md-12 col-xs-12">
-    <div class="row" *ngIf="isActive" class="loader">
-      <div class="text-center" style="margin-top: -300px;margin-right: 40px;">
-        <button class="btn btn-primary" type="button" disabled>
-          <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
-          Carregando...
-        </button>
-      </div>
-    </div>
-  </div>
 </div>
