--- a/src/app/pages/gestao-paciente/novo-paciente/novo-paciente.component.html
+++ b/src/app/pages/gestao-paciente/novo-paciente/novo-paciente.component.html
@@ -71,75 +71,62 @@
                     </div>
                   </div>-->
                 </div>
-                <div *ngIf="isInformacao">
                   <div class="form-row align-items-center">
-                    <h6 class="p-1">Informações Gerais</h6>
+                    <h6 class="p-1">Dados Pessoais do Paciente:</h6>
                   </div>
-                  <div class="form-row align-items-center">
-                    <div class="form-group col-md-4">
-                      <label for="nome">Escolha o médico*</label>
-                      <select class="form-control" formControlName="medico"
-                        (change)="verificaMedico($event.target.value)">
-                        <option value="null" selected>SELECIONE</option>
-                        <option *ngFor="let medico of listMedico" value="{{ medico.id }}">{{
-                          medico.name}}</option>
-                      </select>
-                    </div>
-                  </div>
-                  <div class="form-row align-items-center">
-                    <div class="form-group col-md-6">
-                      <label for="nome">Nome*</label>
-                      <input class="form-control" name="nome" id="nome" type="text" formControlName="nome" />
-                    </div>
-                    <div class="form-group col-md-3">
-                      <label for="dateNasc">Data de nascimento*</label>
-                      <div class="row pl-3">
-                        <input class="date" type="date" id="dateNasc" name="mydate" formControlName="dateNasc"
-                          maxlength="10" (blur)="validaData($event.target.value)" />
-                      </div>
-                      <div *ngIf="showMsgErro" class="link-text pt-2" style="color: #dc3545;">
-                        {{this.msgErro}} <br />
-                      </div>
-                    </div>
-                  </div>
-                  <div class="form-row align-items-center">
-                    <div class="form-group col-md-3">
-                      <label for="CPF">CPF*</label>
-                      <input class="form-control" name="cpf" id="cpf" type="text" formControlName="cpf" value="cpf"
-                        mask="000.000.000-00" (change)="isValidCpf($event.target,formNovoPaciente.value)" />
-                      <div *ngIf="showMsgErroCpf" class="link-text pt-2" style="color: #dc3545;">
-                        {{this.msgErroCpf}} <br />
-                      </div>
-                    </div>
-                    <div class="form-group col-md-3">
-                      <label class="mat-button mb-3">Sexo biologico*</label>
-                      <div class="row">
-                        <label class="radio-inline mr-3 pl-3">
-                          <input class="mat-button" type="radio" id="radio" name="optradio" value="M"
-                            (click)="viewdiv($event.target.value)">
-                          Masculino</label>
-                        <label class="radio-inline">
-                          <input class="mat-button" type="radio" id="radio" name="optradio" value="F"
-                            (click)="viewdiv($event.target.value)"> Feminino</label>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="form-group row pl-3">
-                    <div class="col-md-5">
-                      <div class="align-self-start">
-                        <img src="{{this.avatar }}" style="height: 80px;" />
-                      </div>
-                    </div>
-                  </div>
-                  <div class="form-row align-items-center">
-                    <div class="form-group row">
-                      <div class="col-md-12">
-                        <label for="imagem">Adicione sua foto</label>
-                        <input class="form-control-file media-body" name="imagem" id="imagem" type="file"
-                          formControlName="imagem" (change)="converterImagem($event, $event.target)" value="imagem" />
-                      </div>
-                    </div>
-                  </div>
+                  <div class="col-md-12 col-xs-12 align-items-center" *ngIf="isInformacao">
+                      <div class="form-row align-items-center">
+                        <div class="form-group col-md-4">
+                          <label for="nome">Escolha o médico*</label>
+                          <select class="form-control" formControlName="medico"
+                            (change)="verificaMedico($event.target.value)">
+                            <option value="null" selected>SELECIONE</option>
+                            <option *ngFor="let medico of listMedico" value="{{ medico.id }}">{{
+                              medico.name}}</option>
+                          </select>
+                        </div>
+                          <div class="form-group col-md-4">
+                            <label for="nome">Nome do Paciente*</label>
+                            <input class="form-control" name="nome" id="nome" type="text" formControlName="nome" />
+                          </div>
+                          <div class="form-group col-md-2">
+                            <label for="CPF">CPF*</label>
+                            <input class="form-control" name="cpf" id="cpf" type="text" formControlName="cpf" value="cpf"
+                              mask="000.000.000-00" (change)="isValidCpf($event.target,formNovoPaciente.value)" />
+                          </div>
+                          <div class="form-group col-md-2">
+                            <label for="dateNasc">Data de nascimento*</label>
+                            <div class="row pl-3">
+                              <input class="date" type="date" id="dateNasc" name="mydate" formControlName="dateNasc"
+                                maxlength="10" (blur)="validaData($event.target.value)" />
+                            </div>
+                          </div>
+                        </div>
+                    
+                        <div class="form-row align-items-center">
+                          <div class="form-group col-md-4">
+                            <label>Sexo Biológico*</label>
+                            <div class="d-flex align-items-center">
+                              <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" id="radioM" name="optradio" value="M" (click)="viewdiv($event.target.value)">
+                                <label class="form-check-label" for="radioM">Masculino</label>
+                              </div>
+                              <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" id="radioF" name="optradio" value="F" (click)="viewdiv($event.target.value)">
+                                <label class="form-check-label" for="radioF">Feminino</label>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="form-group col-md-4 d-flex align-items-center">
+                            <div class="custom-file">
+                              <input type="file" class="custom-file-input" id="imgem" name="imgem" formControlName="imgem" (change)="converterImagem($event, $event.target)">
+                              <label class="custom-file-label" for="imgem">Escolher arquivo</label>
+                            </div>
+                            <div *ngIf="this.avatar" class="col-md-4">
+                              <img class="rounded-circle img-fluid" src="{{ this.avatar }}" alt="User Icon" style="height: 80px;" />
+                            </div>
+                          </div>
+                        </div>
                 </div>
                 <div *ngIf="isLocalizacao">
                   <div class="form-row align-items-center">
