--- a/src/app/pages/visualizar-agenda/agenda/agenda.component.css
+++ b/src/app/pages/visualizar-agenda/agenda/agenda.component.css
@@ -25,11 +25,12 @@ b { /* used for event dates/times */
   font-size: 14px;
 }
 
+
 .demo-app-sidebar {
-  width: 300px;
+  width: auto;
   line-height: 1.5;
-  background: #eaf9ff;
-  border-right: 1px solid #d3e2e8;
+  background: #ecececa2;
+  border-right: 1px solid #c4d8d3;
 }
 
 .demo-app-sidebar-section {
@@ -45,4 +46,18 @@ b { /* used for event dates/times */
   max-width: 1100px;
   margin: 0 auto;
   height: 475px;
+}
+
+/* Oculta a barra de rolagem vertical */
+.fc-scroller.fc-time-grid-container {
+  overflow-y: hidden;
+}
+/* Estilo para o contêiner pai da agenda */
+.full-calendar-container {
+  height: 100vh; /* 100% da altura da viewport */
+}
+
+/* Estilo para o contêiner pai da agenda */
+.div-app {
+  height: 100vh; /* 100% da altura da viewport */
 }
